--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
 
-.status_block{
-    
+.titulo{
+    background-color: antiquewhite;
+    padding-right: 150px;
+    padding-left: 150px;
+    margin: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    float: left;
+    font-size: 20px;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.quadrado_on_or_off{
+    background-color: green;
+    border:10px solid;
+    border-radius: 14px;
+    border-color: blueviolet;
+    width: 100px;
+    padding: 100px;
 }
