--- a/style.css
+++ b/style.css
@@ -1,22 +1,28 @@
-
-.titulo{
-    background-color: antiquewhite;
-    padding-right: 150px;
-    padding-left: 150px;
-    margin: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    float: left;
-    font-size: 20px;
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+head{
+    background-color: green;
 }
 
-.quadrado_on_or_off{
-    background-color: green;
-    border:10px solid;
-    border-radius: 14px;
-    border-color: blueviolet;
-    width: 100px;
-    padding: 100px;
+main {
+    display: flex;
+    width: 100%;
+    height: 80vh;
+    justify-content: center;
+}
+
+article{
+    display: flex;
+    height: 80%;
+    width: 20%;
+    margin: 5%;
+    justify-content: center;
+    background-color: beige;
+}
+
+h1{
+    text-align: center;
+    font-family: monospace;
+}
+
+h2{
+    font-family: monospace;
 }
