--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
-head{
-    background-color: green;
+body{
+    background-color: black;
+    
 }
 
+header img{
+    object-fit: contain;
+}
+
+header{
+    display: flex;
+    width: 100%;
+    height: 10vh;
+    justify-content: center;
+}
 main {
     display: flex;
     width: 100%;
@@ -10,19 +21,35 @@ main {
 }
 
 article{
-    display: flex;
+    border-radius: 10px;
+    /* display: flex; */
     height: 80%;
     width: 20%;
     margin: 5%;
     justify-content: center;
-    background-color: beige;
+    background-color: white;
+}
+
+article h2 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 25%;
 }
 
 h1{
+    color: white;
     text-align: center;
     font-family: monospace;
 }
 
 h2{
     font-family: monospace;
+}
+
+div{
+    margin: auto;
+    background-color: white;
+    border: 3px solid black;
+    height: 30vh;
+    width: 30vh;
 }
