--- a/style.css
+++ b/style.css
@@ -10,18 +10,18 @@
     width: 120px;
     height: 120px;
     border-radius: 50%;
-    background: radial-gradient(black, black 40%, green)
+    background: radial-gradient(#05271b, #05271b 40%, #11c76f)
 }
 
 #ball2{
     position:absolute;
     z-index: -1;
-    right: 650px;
+    right: 620px;
     bottom: 150px;
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    background: radial-gradient(black, black 40%, green)
+    background: radial-gradient(#05271b, #05271b 40%, #11c76f)
 }
 
 #ball3{
@@ -32,7 +32,7 @@
     width: 190px;
     height: 190px;
     border-radius: 50%;
-    background: radial-gradient(black, black 40%, green)
+    background: radial-gradient(#05271b, #05271b 40%, #11c76f)
 }
 
 #ball4{
@@ -43,28 +43,28 @@
     width: 230px;
     height: 230px;
     border-radius: 50%;
-    background: radial-gradient(black, black 40%, green)
+    background: radial-gradient(#05271b, #05271b 40%, #11c76f)
 }
 
 body{
-    background-color: black;
-    
+    background-color: #05271b;
+
 }
 
 img{
-    align-items: left;
-}
-
-header img{
-    object-fit: contain;
+    margin-right: 140px;
+    margin-top: 15px;
+    margin-left: 15px;
+    width: 130px;
+    height: 65px;
 }
 
 header{
     display: flex;
     width: 100%;
     height: 10vh;
-    justify-content: center;
 }
+
 main {
     display: flex;
     width: 100%;
@@ -79,7 +79,7 @@ article{
     width: 20%;
     margin: 5%;
     justify-content: center;
-    background-color: white;
+    background-color: #f5f5f5;
 }
 
 article h2 {
@@ -89,14 +89,15 @@ article h2 {
 }
 
 h1{
-    color: white;
+    color: #f5f5f5;
     text-align: center;
 }
 
-div{
+.status_block{
+    border-radius: 10px;
     margin: auto;
-    background-color: white;
-    border: 3px solid black;
+    background-color: #fcdf8b;
+    border: 3px solid #05271b;
     height: 30vh;
     width: 30vh;
 }
