--- a/style.css
+++ b/style.css
@@ -1,105 +1,115 @@
-body{
+body {
     background-color: #05271b;
 }
 
-*{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;   
-   }
-   
-   #ball1{
-       position:absolute;
-       z-index: -1;
-       right: 1170px;
-       bottom: 50px;
-       width: 120px;
-       height: 120px;
-       border-radius: 50%;
-       background: radial-gradient(#05271b, #05271b 40%, #11c76f)
-   }
-   
-   #ball2{
-       position:absolute;
-       z-index: -1;
-       right: 620px;
-       bottom: 150px;
-       width: 200px;
-       height: 200px;
-       border-radius: 50%;
-       background: radial-gradient(#05271b, #05271b 40%, #11c76f)
-   }
-   
-   #ball3{
-       position:absolute;
-       z-index: -1;
-       right: 60px;
-       bottom: 10px;
-       width: 190px;
-       height: 190px;
-       border-radius: 50%;
-       background: radial-gradient(#05271b, #05271b 40%, #11c76f)
-   }
-   
-   #ball4{
-       position:absolute;
-       z-index: -1;
-       right: 0;
-       bottom: 350px;
-       width: 230px;
-       height: 230px;
-       border-radius: 50%;
-       background: radial-gradient(#05271b, #05271b 40%, #11c76f)
-   }
-   
-   
-   img{
-       margin-right: 130px;
-       margin-top: 15px;
-       margin-left: 15px;
-       width: 130px;
-       height: 65px;
-   }
-   
-   header{
-       display: flex;
-       width: 100%;
-       height: 10vh;
-   }
-   
-   main {
-       display: flex;
-       width: 100%;
-       height: 80vh;
-       justify-content: center;
-   }
-   
-   article{
-       border-radius: 10px;
-       /* display: flex; */
-       height: 80%;
-       width: 20%;
-       margin: 5%;
-       justify-content: center;
-       background-color: #f5f5f5;
-   }
-   
-   article h2 {
-       width: 100%;
-       text-align: center;
-       margin-bottom: 25%;
-   }
-   
-   h1{
-       color: #f5f5f5;
-       text-align: center;
-   }
-   
-   .status_block{
-       border-radius: 10px;
-       margin: auto;
-       background-color: #fcdf8b;
-       border: 3px solid #05271b;
-       height: 30vh;
-       width: 30vh;
-   }
-   
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
+#ball1 {
+    position: absolute;
+    z-index: -1;
+    right: 1170px;
+    bottom: 50px;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background: radial-gradient(#05271b, #05271b 40%, #11c76f)
+}
+
+#ball2 {
+    position: absolute;
+    z-index: -1;
+    right: 620px;
+    bottom: 150px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background: radial-gradient(#05271b, #05271b 40%, #11c76f)
+}
+
+#ball3 {
+    position: absolute;
+    z-index: -1;
+    right: 60px;
+    bottom: 10px;
+    width: 190px;
+    height: 190px;
+    border-radius: 50%;
+    background: radial-gradient(#05271b, #05271b 40%, #11c76f)
+}
+
+#ball4 {
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    bottom: 350px;
+    width: 230px;
+    height: 230px;
+    border-radius: 50%;
+    background: radial-gradient(#05271b, #05271b 40%, #11c76f)
+}
+
+
+img {
+    margin-right: 130px;
+    margin-top: 15px;
+    margin-left: 15px;
+    width: 130px;
+    height: 65px;
+}
+
+header {
+    display: flex;
+    width: 100%;
+    height: 10vh;
+}
+
+main {
+    display: flex;
+    width: 100%;
+    height: 80vh;
+    justify-content: center;
+}
+
+article {
+    border-radius: 10px;
+    /* display: flex; */
+    height: 80%;
+    width: 20%;
+    margin: 5%;
+    justify-content: center;
+    background-color: #f5f5f5;
+}
+
+article h2 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 25%;
+}
+
+h1 {
+    color: #f5f5f5;
+    text-align: center;
+}
+
+.status_block {
+    margin: auto;
+    background-color: #ebebeb;
+    border: 3px solid #05271b;
+    height: 30vh;
+    width: 30vh;
+}
+.status_bar_true{
+    height: 30vh;
+    width: 5vh;
+    background-color: #11c76f;
+    flex-direction: row;
+}
+.status_bar_false{
+    height: 30vh;
+    width: 5vh;
+    background-color: #fcdf8b;
+    flex-direction: row;
+
+}
