--- a/style.css
+++ b/style.css
@@ -50,8 +50,39 @@ body {
     background: radial-gradient(#05271b, #05271b 40%, #11c76f)
 }
 
+#ball5 {
+    position: absolute;
+    z-index: -1;
+    right: 1110px;
+    bottom: 380px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: radial-gradient(#05271b, #05271b 40%, #11c76f)
+}
 
-img {
+#img_i{
+    width: 20px;
+    height: 20px;
+    margin-right: 25px;
+}
+
+.div_status_i{
+    display: flex;
+}
+
+.status{
+    padding: 0;
+    margin: 0;
+    margin-left: 100px;
+    margin-right: 50px;
+    margin-bottom: 10px;
+    font-weight: 400;
+    
+
+}
+
+#img_logo {
     margin-right: 130px;
     margin-top: 15px;
     margin-left: 15px;
@@ -82,11 +113,57 @@ article {
     background-color: #f5f5f5;
 }
 
-article h2 {
+article h3{
+    margin-bottom: 3%;
+    font-weight: 500;
+}
+
+article h2,h3 {
     width: 100%;
     text-align: center;
-    margin-bottom: 25%;
 }
+
+.time{
+    background-color: #05271b;
+    display: flex;
+    justify-content: space-around;
+    margin: 0;
+    margin-right:12%;
+    margin-left:12%;
+    padding: 0;
+
+}
+ul li{
+    display: inline;
+    color: #f5f5f5;
+}
+
+.label{
+    display: flex;
+}
+.label li {
+    font-weight: 500;
+    width: 40%;
+    display: flex;
+    align-items: center;
+    color: #05271b;
+}
+.label_up{
+    background-color: #11c76f;
+    width: 28px;
+    height: 18px;
+    margin-left: 5%;
+    border: #05271b solid 1.5px;
+}
+.label_down{
+    background-color: #fcdf8b;
+    width: 28px;
+    height: 18px;
+    margin-left: 5%;
+    border: #05271b solid 1.5px;
+}
+
+
 
 h1 {
     color: #f5f5f5;
@@ -95,23 +172,26 @@ h1 {
 
 .status_block {
     margin: auto;
-    background-color: #ebebeb;
+    background-color: #f5f5f5;
     border: 3px solid #05271b;
     height: 30vh;
     width: 30vh;
+    display: flex;
+    flex-direction: row-reverse;
+    z-index: 1;
 }
+
 .status_bar_true{
-    height: 30vh;
-    width: 5vh;
+    height: 99.1%;
+    width: 19.3%;
     background-color: #11c76f;
-    display: flex;
-    flex-direction: row;
+    border: 0.5px solid #05271b;
 }
+
 .status_bar_false{
-    height: 30vh;
-    width: 5vh;
+    height: 99.1%;
+    width: 19.3%;
     background-color: #fcdf8b;
-    display: flex;
-    flex-direction: row;
+    border: 0.5px solid #05271b;
 
 }
