--- a/style.css
+++ b/style.css
@@ -61,24 +61,24 @@ body {
     background: radial-gradient(#05271b, #05271b 40%, #11c76f)
 }
 
-#img_i{
+#img_i {
     width: 20px;
     height: 20px;
     margin-right: 25px;
 }
 
-.div_status_i{
+.div_status_i {
     display: flex;
 }
 
-.status{
+.status {
     padding: 0;
     margin: 0;
     margin-left: 100px;
     margin-right: 50px;
     margin-bottom: 10px;
     font-weight: 400;
-    
+
 
 }
 
@@ -105,7 +105,6 @@ main {
 
 article {
     border-radius: 10px;
-    /* display: flex; */
     height: 80%;
     width: 20%;
     margin: 5%;
@@ -113,34 +112,38 @@ article {
     background-color: #f5f5f5;
 }
 
-article h3{
+article h3 {
     margin-bottom: 3%;
     font-weight: 500;
 }
 
-article h2,h3 {
+article h2,
+h3 {
     width: 100%;
     text-align: center;
 }
 
-.time{
+.time {
     background-color: #05271b;
     display: flex;
     justify-content: space-around;
     margin: 0;
-    margin-right:12%;
-    margin-left:12%;
+    margin-right: 12%;
+    margin-left: 12%;
     padding: 0;
 
 }
-ul li{
+
+ul li {
     display: inline;
     color: #f5f5f5;
 }
 
-.label{
+.label {
     display: flex;
+    margin-left: 13px;
 }
+
 .label li {
     font-weight: 500;
     width: 40%;
@@ -148,14 +151,16 @@ ul li{
     align-items: center;
     color: #05271b;
 }
-.label_up{
+
+.label_on {
     background-color: #11c76f;
     width: 28px;
     height: 18px;
     margin-left: 5%;
     border: #05271b solid 1.5px;
 }
-.label_down{
+
+.label_off {
     background-color: #fcdf8b;
     width: 28px;
     height: 18px;
@@ -181,14 +186,14 @@ h1 {
     z-index: 1;
 }
 
-.status_bar_true{
+.status_bar_true {
     height: 99.1%;
     width: 19.3%;
     background-color: #11c76f;
     border: 0.5px solid #05271b;
 }
 
-.status_bar_false{
+.status_bar_false {
     height: 99.1%;
     width: 19.3%;
     background-color: #fcdf8b;
