--- a/style.css
+++ b/style.css
@@ -123,14 +123,14 @@ h3 {
     text-align: center;
 }
 
-.time {
+.timer {
     background-color: #05271b;
     display: flex;
     justify-content: space-around;
     margin: 0;
     margin-right: 12%;
     margin-left: 12%;
-    padding: 0;
+    padding: 0px;
 
 }
 
