--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
     background: radial-gradient(#05271b, #05271b 40%, #11c76f)
 }
 
-#img_i {
+.img_i {
     width: 20px;
     height: 20px;
     margin-right: 25px;
@@ -83,7 +83,7 @@ body {
 }
 
 #img_logo {
-    margin-right: 130px;
+    margin-right: 250px;
     margin-top: 15px;
     margin-left: 15px;
     width: 130px;
