--- a/style.css
+++ b/style.css
@@ -200,3 +200,21 @@ h1 {
     border: 0.5px solid #05271b;
 
 }
+
+.pop_up{
+    visibility: hidden;
+    position: absolute;
+    text-align: center;
+    width: 300px;
+    height: 300px;
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    transform: scale(0.1);
+}
+
+.open_pop_up{
+    transform: scale(1);
+    visibility: visible;
+    background-color: aquamarine;
+
+}
