--- a/style.css
+++ b/style.css
@@ -240,8 +240,7 @@ h1 {
 }
 
 
-.janela-modal{
-    width: 100vw;
+.modal-window{width: 100vw;
     height: 100vh;
     position: absolute;
     top: 0;
@@ -264,7 +263,7 @@ h1 {
 
 }
 
-.fechar{
+.close{
     position: absolute;
     top: -5px;
     right: -5px;
@@ -272,12 +271,12 @@ h1 {
     height: 30px;
     border-radius: 50%;
     border: 0;
-    background-color: red;
-    color: white;
+    background-color: #941817;
+    color: #f5f5f5;
     font-size: 20px;
     cursor: pointer;
 }
 
-.janela-modal.abrir{
+.modal-window.open{
     display: flex;
 }
