--- a/style.css
+++ b/style.css
@@ -240,7 +240,8 @@ h1 {
 }
 
 
-.modal-window{width: 100vw;
+.modal-window{
+    width: 60vw;
     height: 100vh;
     position: absolute;
     top: 0;
@@ -252,14 +253,17 @@ h1 {
     z-index: 999;
 }
 
+
 .modal{
-    width: 60%;
-    min-width: 450px;
+    width: 30%;
+    min-width: 350px;
     min-height: 200px;
-    background-color: rgba(255, 255, 255, 0.61);
+    background-color: rgba(255, 255, 255, 0.650);
     backdrop-filter: blur(10px);
     padding: 50px;
     border-radius: 20px;
+    text-align: center;
+    align-items: center;
 
 }
 
@@ -279,4 +283,11 @@ h1 {
 
 .modal-window.open{
     display: flex;
+    height: 100vh;
+    width: 100vw;
 }
+
+.modal h1{
+    color:#05271b ;
+}
+
